@@ -81,6 +81,9 @@ Trunk -  Unreleased
     HIVE-801. Add support for row-wise IN
     (Paul Yang via namit)
 
+    HIVE-1351. rcfilecat for debugging
+    (Yongqiang He via namit)
+
   IMPROVEMENTS
     HIVE-983. Function from_unixtime takes long.
     (Ning Zhang via zshao)
